Refactor and optimalization

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 01 18:09:46 CET 2021
-sdk.dir=/Users/woos3066/Library/Android/sdk
+#Sat Apr 17 19:45:06 CEST 2021
+sdk.dir=/Users/wojciechosak/Library/Android/sdk
